# PyExp

./: .gitignore  README.md  setup.cfg  setup.py
jupyter/: ROOT.ipynb  demo_AWGN.ipynb  demo_downmix.py  demo_gen_waveform_csv.py  demo_jupyter.ipynb  demo_plot_errorbar.py  mongodb.py  reference.py
pyexp/: __init__.py  class.py  demo_AWGN.py  demo_complex_ts_fit.py  demo_downmix.py  demo_gen_waveform_csv.py  demo_lsq_fit.py  demo_plot_errorbar.py  demo_time_series_fit.py  example_fig_matchedfilt_chirp.py  misc.py  spec.py  test.py  utils.py
pyexp/fits/: fastfit.py
pyexp/julia/: helloworld.jl  pyjulia.py
pyexp/tests/: test_spec.py
tests/: test_spec.py
