[metadata]
name = pyexp
version = 0.1.0
author = Mingyu (Charles) Li
author_email = mingyuli@mit.edu
description = Playground for Python Programs and Modules
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/charstnut/PyExp
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =pyexp
packages = find:
python_requires = >=3.6
install_requires = 
    scipy
    numpy
    pandas
    lmfit
    sympy

[options.packages.find]
where = pyexp
